Salesforce Project/force-app/main/default/objects/Milk_Production__c/Milk_Production__c.object-meta.xml
<CustomObject>
    <description>Record daily milk collection from farmers.</description>
    <label>Milk Production</label>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Milk Production Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milk Productions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>