Salesforce Project/force-app/main/default/objects/Milk_Production__c/fields/Cattle__c.field-meta.xml
<CustomField>
    <fullName>Cattle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cattle</label>
    <referenceTo>Cattle__c</referenceTo>
    <relationshipLabel>Milk Productions</relationshipLabel>
    <relationshipName>Milk_Productions</relationshipName>
    <type>Lookup</type>
</CustomField>