Salesforce Project/force-app/main/default/objects/Milk_Production__c/fields/Dairy_Farm_Account__c.field-meta.xml
<CustomField>
    <fullName>Dairy_Farm_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dairy_Farm_Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Milk Productions</relationshipLabel>
    <relationshipName>Milk_Productions</relationshipName>
    <type>Lookup</type>
</CustomField>