Salesforce Project/force-app/main/default/objects/Milk_Production__c/fields/Farmer__c.field-meta.xml
<CustomField>
    <fullName>Farmer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Farmer</label>
    <referenceTo>Farmer__c</referenceTo>
    <relationshipLabel>Milk Productions</relationshipLabel>
    <relationshipName>Milk_Productions</relationshipName>
    <type>Lookup</type>
</CustomField>