Salesforce Project/force-app/main/default/objects/Milk_Production__c/fields/Farmer_details__c.field-meta.xml
<CustomField>
    <fullName>Farmer_details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Farmer details</label>
    <referenceTo>Farmer__c</referenceTo>
    <relationshipLabel>Milk Productions (Farmer details)</relationshipLabel>
    <relationshipName>Milk_Productions1</relationshipName>
    <type>Lookup</type>
</CustomField>