Salesforce Project/force-app/main/default/objects/Milk_Production__c/fields/Fat_Content__c.field-meta.xml
<CustomField>
    <fullName>Fat_Content__c</fullName>
    <label>Fat Content (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>