Salesforce Project/force-app/main/default/objects/Milk_Production__c/fields/Milk_Valid__c.field-meta.xml
<CustomField>
    <fullName>Milk_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milk Valid</label>
    <type>Checkbox</type>
</CustomField>