Salesforce Project/force-app/main/default/objects/Milk_Production__c/fields/Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_Date__c</fullName>
    <description>Date when the milk was produced</description>
    <label>Production Date</label>
    <type>Date</type>
</CustomField>