Salesforce Project/force-app/main/default/objects/Milk_Production__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Amount of milk produced in liters</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>