Salesforce Project/force-app/main/default/objects/Milk_Production__c/validationRules/Fat_Content.validationRule-meta.xml
<ValidationRule>
    <fullName>Fat_Content</fullName>
    <active>true</active>
    <description>percentage of fat in the milk.</description>
    <errorConditionFormula>OR( Fat_Content__c &lt; 0,  Fat_Content__c &gt; 20)</errorConditionFormula>
    <errorDisplayField>Fat_Content__c</errorDisplayField>
    <errorMessage>Enter a valid Fat % between 0 and 20</errorMessage>
</ValidationRule>