Salesforce Project/force-app/main/default/objects/Milk_Production__c/validationRules/Milk_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Milk_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>&quot;Milk Quantity cannot be negative.&quot;</errorMessage>
</ValidationRule>